src/test/ui/asm/x86_64/srcloc.stderr
error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:11:15
   |
LL |         asm!("invalid_instruction");
   |               ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction
   |     ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:15:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:20:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:26:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:4:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:33:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:4:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:38:14
   |
LL |         asm!(concat!("invalid", "_", "instruction"));
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction
   |     ^^^^^^^^^^^^^^^^^^^

warning: scale factor without index register is ignored
  --> $DIR/srcloc.rs:41:15
   |
LL |         asm!("movaps %xmm3, (%esi, 2)", options(att_syntax));
   |               ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:23
   |
LL |     movaps %xmm3, (%esi, 2)
   |                          ^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:45:14
   |
LL |             "invalid_instruction",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction
   |     ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:51:14
   |
LL |             "invalid_instruction",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:58:14
   |
LL |             "invalid_instruction",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:65:13
   |
LL |             concat!("invalid", "_", "instruction"),
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:72:13
   |
LL |             concat!("invalid", "_", "instruction"),
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction1'
  --> $DIR/srcloc.rs:79:14
   |
LL |             "invalid_instruction1",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction1
   |     ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction2'
  --> $DIR/srcloc.rs:80:14
   |
LL |             "invalid_instruction2",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction2
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction1'
  --> $DIR/srcloc.rs:86:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction1
   |     ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction2'
  --> $DIR/srcloc.rs:86:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction2
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction1'
  --> $DIR/srcloc.rs:95:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction1
   |     ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction2'
  --> $DIR/srcloc.rs:95:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction2
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction3'
  --> $DIR/srcloc.rs:99:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction3
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction4'
  --> $DIR/srcloc.rs:99:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:5:1
   |
LL | invalid_instruction4
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction1'
  --> $DIR/srcloc.rs:110:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction1
   |     ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction2'
  --> $DIR/srcloc.rs:110:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction2
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction3'
  --> $DIR/srcloc.rs:114:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:5:1
   |
LL | invalid_instruction3
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction4'
  --> $DIR/srcloc.rs:114:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:6:1
   |
LL | invalid_instruction4
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 23 previous errors; 1 warning emitted

